<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pjatk.lab4.MainActivity">
    <item
        android:id="@+id/menu_main"
        android:orderInCategory="1"
        android:title="@string/menu_main" />
    <item
        android:id="@+id/menu_bmi"
        android:orderInCategory="2"
        android:title="@string/menu_text_bmi" />
    <item
        android:id="@+id/menu_ppm"
        android:orderInCategory="3"
        android:title="@string/menu_text_ppm" />
    <item
        android:id="@+id/menu_recipe"
        android:orderInCategory="4"
        android:title="@string/menu_text_recipe" />
    <item
        android:id="@+id/menu_graph"
        android:orderInCategory="5"
        android:title="@string/menu_text_graph" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
